# Innopolis

./: CMakeLists.txt  LICENSE  README.md  fsa.txt  input.txt  output.txt  result.txt
BS-Year1/DSA/Assignment-1/AssignmentImplementing/src/: Main.java
BS-Year1/DSA/Assignment-1/Command-1/src/: Main.java
BS-Year1/DSA/Assignment-1/src/: Main.java
BS-Year1/DSA/BST/src/: SuccessorPredecessor.java
BS-Year1/DSA/Lab-1/: EvaluationOfArithmeticExpression.cpp  InsertionSort.cpp  SelectionSort.cpp
BS-Year1/DSA/Lab-10/src/: Main.java
BS-Year1/DSA/Lab-2/: EvaluationOfArithmeticExpression.cpp  Shunting-yardAlgorithm.cpp
BS-Year1/DSA/Lab-3/: FrequencyAnalysis.cpp  LinkedHashMap.h  SpellChecker.cpp
BS-Year1/DSA/Lab-5/src/: Fibonacci.java
BS-Year1/DSA/Lab-9-Graph/src/: Main.java  Main2.java  MainOfAdjacentList.java  MainOfAdjacentMatrix.java
BS-Year1/DSA/Lab-9-Lev/src/: Graph.java  Main.java
BS-Year1/DSA/Lab-9-Said/: AdjMatrixStruct.cpp
BS-Year1/DSA/Lab-9/src/: Main.java
BS-Year1/DSA/Max-Subarray/src/: Main.java
BS-Year1/ITP-1/Assignment1/: HexadecimalSort.c
BS-Year1/ITP-1/Assignment2/SkiResort/: SkiResort.c
BS-Year1/ITP-1/Assignment2/TextJustification/: TextJustification.c
BS-Year1/ITP-1/Lab-2/EX-1/: EX-1.c
BS-Year1/ITP-1/Lab-3/EX-10/: EX-10.c
BS-Year1/ITP-1/Lab-3/EX-11/: EX-11.c
BS-Year1/ITP-1/Lab-3/EX-12/: EX-12.c
BS-Year1/ITP-1/Lab-3/EX-13/: EX-13.c
BS-Year1/ITP-1/Lab-3/EX-5/: EX-5.c
BS-Year1/ITP-1/Lab-3/EX-6/: EX-6.c
BS-Year1/ITP-1/Lab-3/EX-7/: EX-7.c
BS-Year1/ITP-1/Lab-3/EX-8/: EX-8.c
BS-Year1/ITP-1/Lab-3/EX-9/: EX-9.c
BS-Year1/ITP-1/Lab-4/EX-1/: EX-1.c
BS-Year1/ITP-1/Lab-5/EX-2/: EX-2.c
BS-Year1/SSAD/Assignment1/: LargestSum.cpp  LinkedList.cpp  README.rst  Substring.cpp
BS-Year1/SSAD/Assignment2/: MatrixDeterminant.cpp  MatrixInverse.cpp  README.rst
BS-Year1/SSAD/Assignment3/: inverse.cpp
BS-Year1/SSAD/Assignment3/Lev/: LeastSquareApproximation.cpp
BS-Year1/SSAD/Assignment3/Roman/: README.rst
BS-Year1/SSAD/Lab-2/EX-1/: main.cpp
BS-Year1/SSAD/Lab-3/EX-1/: main.cpp
BS-Year1/SSAD/Lab-3/EX-2/: main.cpp
BS-Year1/SSAD/Lab-3/EX-3/: main.cpp
BS-Year1/SSAD/Lab-5/: main.cpp
BS-Year1/SSAD/Lab-8/: EX1.cpp  EX2.cpp  EX3.cpp
BS-Year1/TCS/Assignment1/src/: Main.java  README.rst
BS-Year1/TCS/Assignment2/src/: Main.java
BS-Year2/AI/: input.txt  outputAStar.txt  outputBacktracking.txt
BS-Year2/AI/src/: RomanMolochkov.java
BS-Year2/OS/: README.md
BS-Year2/OS/week01/: ex1.sh  ex2.sh  ex2.txt  ex3.sh  ex4  file.txt
BS-Year2/OS/week01/homeDir/: home.txt
BS-Year2/OS/week01/rootDir/: root.txt
BS-Year2/OS/week02/: ex1.c  ex1.sh  ex2.c  ex2.sh  ex3.c  ex3.sh  ex4.c  ex4.sh  ex5.c  ex5.sh  ex6.c  ex6.sh
BS-Year2/OS/week03/: ex1.c  ex1.sh  ex2.c  ex3.c  ex4.c
BS-Year2/OS/week04/: ex1.c  ex2.c  ex2.sh  ex3.c  ex3.sh  ex3.txt  ex4.c  ex4.sh  temp.txt
BS-Year2/OS/week05/: channel.c  ex1.sh  ex2.c  ex3.c  ex3.explanation.txt  ex3.sh  ex3.txt  ex4.c  ex4.explanation.txt  ex4.sh  ex4.txt  publisher.c  subscriber.c
BS-Year2/OS/week06/: ex1.c  ex1.sh  ex2.c  ex2.sh  ex2.txt  ex3.c  ex3.sh  ex3.txt
BS-Year2/OS/week07/: ex1.txt  ex2.c  ex3.c  ex4.c  ex5.c
BS-Year2/OS/week08/: ex1.txt  ex2.c  ex2.sh  ex3.sh  ex4.c  ex4.sh  ex5.txt  ex6.txt
BS-Year2/OS/week09/: ex1.c  ex2.txt
BS-Year2/OS/week10/: _ex1.txt  _ex3.txt  ex1.sh  ex1.txt  ex2.sh  ex2.txt  ex3.sh  ex3.txt  ex4.c  ex4.sh  ex4.txt
BS-Year2/OS/week11/: ex1.sh  ex2.c  ex2.sh  ex2.txt
BS-Year2/OS/week12/: ex1.txt  ex2.c  ex2.txt  ex3.c  ex3.txt
BS-Year2/OS/week13/: ex1.c  ex2.txt  input.txt
(+79 files in other folders)
