cmake_minimum_required(VERSION 3.20)
project(Innopolis)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)

add_executable(Innopolis BS-Year1/ITP-1/Lab-2/EX-1/EX-1.c)
add_executable(Innopolis0 BS-Year1/SSAD/Lab-2/EX-1/main.cpp)
add_executable(Innopolis01 BS-Year1/SSAD/Assignment2/MatrixDeterminant.cpp)
add_executable(Innopolis02 BS-Year1/SSAD/Assignment2/MatrixInverse.cpp)
add_executable(Innopolis03 BS-Year1/DSA/Lab-3/FrequencyAnalysis.cpp)
add_executable(Innopolis04 BS-Year1/DSA/Lab-3/SpellChecker.cpp)
add_executable(Innopolis05 BS-Year1/DSA/Lab-1/EvaluationOfArithmeticExpression.cpp)
add_executable(Innopolis06 BS-Year1/SSAD/Lab-3/EX-1/main.cpp)
add_executable(Innopolis07 BS-Year1/SSAD/Lab-3/EX-2/main.cpp)
add_executable(Innopolis08 BS-Year1/SSAD/Lab-3/EX-3/main.cpp)
add_executable(Innopolis09 BS-Year1/SSAD/Lab-4/main.cpp)
add_executable(Innopolis010 BS-Year1/SSAD/Assignment1/LargestSum.cpp)
add_executable(Innopolis011 BS-Year1/SSAD/Assignment1/LinkedList.cpp)
add_executable(Innopolis012 BS-Year1/SSAD/Assignment1/Substring.cpp)
add_executable(Innopolis013 BS-Year1/SSAD/Lab-8/EX1.cpp)
add_executable(Innopolis014 BS-Year1/SSAD/Lab-8/EX2.cpp)
add_executable(Innopolis015 BS-Year1/SSAD/Lab-8/EX3.cpp)
add_executable(Innopolis018 BS-Year1/SSAD/Assignment3/inverse.cpp)
add_executable(Innopolis1 BS-Year1/ITP-1/Lab-3/EX-1/EX-1.c)
add_executable(Innopolis2 BS-Year1/ITP-1/Lab-3/EX-10/EX-10.c)
add_executable(Innopolis3 BS-Year1/ITP-1/Lab-3/EX-11/EX-11.c)
add_executable(Innopolis4 BS-Year1/ITP-1/Lab-3/EX-12/EX-12.c)
add_executable(Innopolis5 BS-Year1/ITP-1/Lab-3/EX-13/EX-13.c)
add_executable(Innopolis6 BS-Year1/ITP-1/Lab-3/EX-5/EX-5.c)
add_executable(Innopolis7 BS-Year1/ITP-1/Lab-3/EX-6/EX-6.c)
add_executable(Innopolis8 BS-Year1/ITP-1/Lab-3/EX-7/EX-7.c)
add_executable(Innopolis9 BS-Year1/ITP-1/Lab-3/EX-8/EX-8.c)
add_executable(Innopolis10 BS-Year1/ITP-1/Lab-3/EX-9/EX-9.c)
add_executable(Innopolis11 BS-Year1/ITP-1/Assignment2/SkiResort/SkiResort.c)
add_executable(Innopolis12 BS-Year1/ITP-1/Assignment2/TextJustification/TextJustification.c)
add_executable(Innopolis13 BS-Year1/ITP-1/Assignment1/HexadecimalSort.c)
add_executable(Innopolis14 BS-Year1/ITP-1/Lab-4/EX-1/EX-1.c)